--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "2.*",
         "mdmsoft/yii2-admin": "~2.0",
         "xj/yii2-uploadify-widget": "~2.0.0",
-        "yiidoc/yii2-redactor": "*"
+        "yiidoc/yii2-redactor": "*",
+        "funson86/yii2-setting": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
